chang layout little bit

--- a/PhamTaManhLan_8888/appsettings.json
+++ b/PhamTaManhLan_8888/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-2HIEQ3KN\\SQLEXPRESS;Database=BakeryShop;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BakeryShop;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "Logging": {
