Thêm nút "Continue to Shopping" Hiện chữ "Emoty Cart" khi Shopping Cart trống hoặc Clear Cart

--- a/PhamTaManhLan_8888/appsettings.json
+++ b/PhamTaManhLan_8888/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-2HIEQ3KN\\SQLEXPRESS;Database=BakeryShop;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DoLTW;Trusted_Connection=True;TrustServerCertificate=True"
+    },
 
   "Logging": {
     "LogLevel": {
