--- a/PhamTaManhLan_8888/appsettings.json
+++ b/PhamTaManhLan_8888/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Gemini": {
+    "ApiKey": "AIzaSyDebKa0BlBIslOIUeDaXWg96fqhfcauOCw",
+    "ApiUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BakeryShop;Trusted_Connection=True;TrustServerCertificate=True"
   },
