--- a/PhamTaManhLan_8888/appsettings.json
+++ b/PhamTaManhLan_8888/appsettings.json
@@ -4,7 +4,7 @@
     "ApiUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BakeryShop;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DoLTW;Trusted_Connection=True;TrustServerCertificate=True"
   },
 
   "Logging": {
